trivy/trivy-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: trivy-ingress
  namespace: trivy
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: trivy.example.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: my-trivy
            port:
              number: 4954
